--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 
-<body style="background-color:boja po zelji;">
+<body>
 	
 	<h1 style="color:blak ;text-align:center;"> BMW(Bayerische Motoren Werke) </h1>
 
