--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h1 style="color:blak ;text-align:center;"> BMW(Bayerische Motoren Werke) </h1>
 
 	
-	<a href="https://www.bmw.rs/sr/" target="_blank">
+	<p style="text-align:center><a href="https://www.bmw.rs/sr/" target="_blank">
 	<img src="m5.png"> </a>
 
 	<a href="https://www.polovniautomobili.com/auto-oglasi/bmw/m5" target="_blank">
