--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	
-	<h1 style="color:blak ;text-align:center;"> BMW(Bayerische Motoren Werke) </h1>
+	<h1 style="text-align:center;"> BMW(Bayerische Motoren Werke) </h1>
 
 	
 	<p style="text-align:center"><a href="https://www.bmw.rs/sr/" target="_blank">
