--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	
 
 
-	<h1 style="color:black ;text-align:center;"> BMW M5 Competition </h1>
-	<p style="color:black;font-family:font po zelji;font-size:200%;">
+	<h1 style="text-align:center;"> BMW M5 Competition </h1>
+	<p style="font-size:200%;">
 
 	M5 Comp je vrhunski uređaj koji kombinuje inovativni dizajn,<br>
 	izuzetnu funkcionalnost i efikasnost u svakom pogledu. Ovaj proizvod je savršen <br>
